Find top campaign by sort param
