# docs/openapi/api.yml
@@ -11,11 +11,11 @@ tags:
 schemes:
   - http
 paths:
-  /datasource:
+  /datasources:
     get:
       tags:
         - "warehouse"
-      summary: "Get available datasource"
+      summary: "Get available datasources"
       operationId: "getAvailableDatasource"
       produces:
         - "application/json"
@@ -25,13 +25,13 @@ paths:
           schema:
             type: "array"
             items:
-              $ref: "#/definitions/Dimensions"
+              $ref: "#/definitions/Dimension"
   /analytics:
     get:
       tags:
         - "warehouse"
       summary: "Get available analytics"
-      operationId: "getAnalytics"
+      operationId: "findAnalyticsByParam"
       produces:
         - "application/json"
       parameters:
@@ -70,19 +70,19 @@ paths:
           schema:
             type: "array"
             items:
-              $ref: "#/definitions/Analytics"
-  /analytics/dimentions:
+              $ref: "#/definitions/Analytic"
+  /analytics/campaign/top:
     get:
       tags:
         - "warehouse"
-      summary: "Find datasource or campaign which meets metrics criteria"
-      operationId: "getAnalyticDimensions"
+      summary: "Find top campaign and sorted by param"
+      operationId: "findTopCampaignBy"
       produces:
         - "application/json"
       parameters:
-        - name: metrics
+        - name: sortBy
           in: query
-          description:  Set of metrics (plus calculated ones) to be aggregated on
+          description:  Sorting param
           required: true
           type: string
           enum:
@@ -90,32 +90,25 @@ paths:
             - impressions
             - ctr
           default: clicks
-        - name: dimensions
-          required: true
+        - name: dateFrom
           in: query
-          description: an optional set of dimensions to be grouped by
+          description: date from
           type: string
-          enum:
-            - campaign
-            - datasource
-          default: campaign
-        - name: valueFrom
+          format: date
+        - name: dateTo
           in: query
           description: date from
-          type: number
-        - name: valueTo
-          in: query
-          description: date from
-          type: number
+          format: date
+          type: string
       responses:
         "200":
           description: "successful operation"
           schema:
             type: "array"
             items:
-              $ref: "#/definitions/Dimensions"
+              $ref: "#/definitions/Analytic"
 definitions:
-  Dimensions:
+  Dimension:
     required:
       - id
       - name
@@ -125,7 +118,7 @@ definitions:
         type: "string"
       name:
         type: "string"
-  Analytics:
+  Analytic:
     type: "object"
     properties:
       totalClicks:
@@ -134,11 +127,5 @@ definitions:
         type: "integer"
       clickThroughRate:
         type: "number"
-      dimension:
-        type: "string"
       dimensionName:
-        type: "string"
-      dateFrom:
-        type: "string"
-      dateTo:
         type: "string"
