# src/main/kotlin/com/challenge/warehouse/controller/analytics/AnalyticsController.kt
@@ -1,23 +1,23 @@
 package com.challenge.warehouse.controller.analytics
 
 import com.challenge.warehouse.api.AnalyticsApi
-import com.challenge.warehouse.api.model.Analytics
-import com.challenge.warehouse.api.model.Dimensions
+import com.challenge.warehouse.api.model.Analytic
 import com.challenge.warehouse.error.ErrorCodes.WRONG_DATE_RANGE
 import com.challenge.warehouse.error.ErrorCodes.WRONG_DIMENSION_PARAMETER
 import com.challenge.warehouse.error.ErrorCodes.WRONG_METRIC_PARAMETER
+import com.challenge.warehouse.error.ErrorCodes.WRONG_SORT_BY_PARAMETERS
+import com.challenge.warehouse.model.AnalyticsRequestData
 import com.challenge.warehouse.model.Dimension
 import com.challenge.warehouse.model.Dimension.CAMPAIGN
 import com.challenge.warehouse.model.Dimension.DATASOURCE
 import com.challenge.warehouse.model.Metric
 import com.challenge.warehouse.model.Metric.CLICKS
 import com.challenge.warehouse.model.Metric.IMPRESSIONS
-import com.challenge.warehouse.model.RequestData
+import com.challenge.warehouse.model.TopCampaignRequest
 import com.challenge.warehouse.model.exception.ValidationException
 import com.challenge.warehouse.service.aggregator.AnalyticsAggregator
 import org.springframework.http.ResponseEntity
 import org.springframework.web.bind.annotation.RestController
-import java.math.BigDecimal
 import java.time.LocalDate
 
 @RestController
@@ -25,27 +25,16 @@ class AnalyticsController(
     private val analyticsAggregator: AnalyticsAggregator
 ) : AnalyticsApi {
 
-    override fun getAnalyticDimensions(
-        metrics: String,
-        dimensions: String,
-        valueFrom: BigDecimal?,
-        valueTo: BigDecimal?
-    ): ResponseEntity<List<Dimensions>> {
-        return super.getAnalyticDimensions(metrics, dimensions, valueFrom, valueTo)
-    }
-
-    override fun getAnalytics(
-        metrics: List<String>,
-        dimensions: String?,
+    override fun findTopCampaignBy(
+        sortBy: String,
         dateFrom: LocalDate?,
         dateTo: LocalDate?
-    ): ResponseEntity<List<Analytics>> {
-        validate(metrics, dimensions, dateFrom, dateTo)
+    ): ResponseEntity<List<Analytic>> {
+        validateTopCampaignParams(sortBy, dateFrom, dateTo)
         return ResponseEntity.ok(
-            analyticsAggregator.findAnalytics(
-                RequestData(
-                    metrics = metrics.map { Metric.valueOf(it.uppercase()) }.toSet(),
-                    dimension = mapToDimension(dimensions),
+            analyticsAggregator.findTopCampaignBy(
+                TopCampaignRequest(
+                    sortBy = Metric.valueOf(sortBy.uppercase()),
                     dateFrom = dateFrom,
                     dateTo = dateTo
                 )
@@ -53,15 +42,43 @@ class AnalyticsController(
         )
     }
 
-    private fun mapToDimension(dimensions: String?): Dimension? {
-        return if (dimensions != null) {
-            Dimension.valueOf(dimensions.uppercase())
-        } else {
-            null
-        }
+    override fun findAnalyticsByParam(
+        metrics: List<String>,
+        dimensions: String?,
+        dateFrom: LocalDate?,
+        dateTo: LocalDate?
+    ): ResponseEntity<List<Analytic>> {
+        validateAnalyticsParams(metrics, dimensions, dateFrom, dateTo)
+        return ResponseEntity.ok(
+            analyticsAggregator.findAnalytics(
+                AnalyticsRequestData(
+                    metrics = metrics.map { Metric.valueOf(it.uppercase()) }.toSet(),
+                    dimension = dimensions.mapToDimension(),
+                    dateFrom = dateFrom,
+                    dateTo = dateTo
+                )
+            ).map { it.toContract() }
+        )
     }
 
-    private fun validate(metrics: List<String>, dimensions: String?, dateFrom: LocalDate?, dateTo: LocalDate?) {
+    private fun validateTopCampaignParams(sortBy: String, dateFrom: LocalDate?, dateTo: LocalDate?) {
+        validateSortBy(sortBy)
+        validateDates(dateFrom = dateFrom, dateTo = dateTo)
+    }
+
+    private fun validateSortBy(sortBy: String) {
+        takeIf { !Metric.values().map { it.name }.contains(sortBy.uppercase()) }
+            ?.run {
+                throw ValidationException(WRONG_SORT_BY_PARAMETERS)
+            }
+    }
+
+    private fun validateAnalyticsParams(
+        metrics: List<String>,
+        dimensions: String?,
+        dateFrom: LocalDate?,
+        dateTo: LocalDate?
+    ) {
         validateMetrics(metrics)
         validateDimensions(dimensions)
         validateDates(dateFrom = dateFrom, dateTo = dateTo)
@@ -90,5 +107,11 @@ class AnalyticsController(
             }?.run {
                 throw ValidationException(WRONG_METRIC_PARAMETER)
             }
+    }
+
+    private fun String?.mapToDimension(): Dimension? {
+        return this?.run {
+            Dimension.valueOf(uppercase())
+        }
     }
 }
