# src/main/kotlin/com/challenge/warehouse/controller/analytics/MapperToContract.kt
@@ -1,11 +1,11 @@
 package com.challenge.warehouse.controller.analytics
 
-import com.challenge.warehouse.api.model.Analytics
+import com.challenge.warehouse.api.model.Analytic
 import com.challenge.warehouse.model.AnalyticsView
 import java.math.RoundingMode
 
 fun AnalyticsView.toContract() =
-    Analytics(
+    Analytic(
         totalClicks = totalClicks,
         totalImpressions = totalImpressions,
         clickThroughRate = clickThroughRate?.setScale(2, RoundingMode.HALF_UP),
