# src/main/kotlin/com/challenge/warehouse/controller/datasource/DatasourceController.kt
@@ -1,7 +1,7 @@
 package com.challenge.warehouse.controller.datasource
 
-import com.challenge.warehouse.api.DatasourceApi
-import com.challenge.warehouse.api.model.Dimensions
+import com.challenge.warehouse.api.DatasourcesApi
+import com.challenge.warehouse.api.model.Dimension
 import com.challenge.warehouse.repository.DatasourceRepository
 import org.springframework.http.ResponseEntity
 import org.springframework.web.bind.annotation.RestController
@@ -9,9 +9,9 @@ import org.springframework.web.bind.annotation.RestController
 @RestController
 class DatasourceController(
     private val datasourceRepository: DatasourceRepository
-) : DatasourceApi {
+) : DatasourcesApi {
 
-    override fun getAvailableDatasource(): ResponseEntity<List<Dimensions>> {
-        return ResponseEntity.ok(datasourceRepository.findAll().map { Dimensions(id = it.id, name = it.name) })
+    override fun getAvailableDatasource(): ResponseEntity<List<Dimension>> {
+        return ResponseEntity.ok(datasourceRepository.findAll().map { Dimension(id = it.id, name = it.name) })
     }
 }
